# interview_tasks

CefaloTask/: .gitignore  Cefalo.sln
CefaloTask/Cefalo.Csharp.Api/: Cefalo.Csharp.Api.csproj  Cefalo.Csharp.Api.http
CefaloTask/Cefalo.Csharp.Api/Controllers/: UsersController.cs
CefaloTask/Cefalo.Csharp.Api/Properties/: launchSettings.json
CefaloTask/Cefalo.Csharp.Application/DependencyInjection/: ServiceCollectionExtensions.cs
CefaloTask/Cefalo.Csharp.Infrastructure/: Cefalo.Csharp.Infrastructure.csproj
DesignTask/: AppointmentBookingEr.puml  Architecture.md  Assignment.md  editor.url
DesignTask/SampleArchitecture/: docker-compose.yml
chaldal_task_rust/: Cargo.toml  makefile
chaldal_task_rust/data/: 10780.json  13116.json  14842.json  17172.json  2.json  20566.json  21632.json  27366.json  29127.json  30024.json  30332.json  31870.json  33550.json  34407.json  34429.json  36495.json  37327.json  38639.json  7.json
chaldal_task_rust/docs/: eng-standards.html  spec.html
chaldal_task_rust/src/: command.rs  files.rs  filter.rs  main.rs  userdata.rs
chaldal_task_rust/src/userdata/: filedata.rs  jsondata.rs
fsharp/: 0001.MultiplesOfThreeAndFive.fsx  0002.EvenFibonacciNumbers.fsx  0003.LargestPrimeFactor.fsx  0004.LargestPalindromeProduct.fsx  0005.SmallestMultiple.fsx  0006.SumSquareDifference.fsx  0007.10001stPrime.fsx  0008.LargestProductInASeries.fsx  0009.SpecialPythagoreanTriplet.fsx  0010.SummationOfPrimes.fsx  0011.LargestProductInAGrid.fsx  README.md  Students.txt  fsharp_practice.fsproj  main.fs
(+39 files in other folders)
