[package]
name = "chaldal"
version = "0.1.0"
authors = ["Raiyan Hossain <ryanhossain9797@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
glob = "0.3"
async-std = {version = "1.9", features =["attributes"] }
anyhow = "1.0"
futures = "0.3"
chrono = "0.4"